# personal-ai-infrastructure

./: .env.sample  .gitignore  CLAUDE.md  PLUGINS.md  QUICKSTART.md  justfile  statusline.sh
agent-output-context/: README.md
agents/: code-reviewer.md  code.md  context-compactor.md  cto-advisor.md  database-engineer.md  database.engineer.md  databasse.engineer.md  devops-platform-engineer.md  fastify-specialist.md  github-manager.md  ios-product-designer.md  kb-builder.md  kotlin-specialist.md  nextjs-app-developer.md  performance-engineer.md  plan-architect.md  product-manager.md  python-web-scraper.md  react-developer.md  research-agent.md  research-specialist.md  security-engineer.md  solution-architect.md  swift-specialist.md  test-automation-engineer.md  tool-router.md  ui-ux-designer.md
apps/drive/: pyproject.toml
apps/drive/commands/: proc.py
apps/drive/modules/: proc.py
commands/: README.md  autopilot-status.md  check.md  commit.md  evaluate-skill.md  inspect-skill.md  kb.md  pr.md  pre-pr-review.md  restore-state.md  save-state.md  skill-health.md  task-manage.md  task-sync.md  tasks.md
context/: CLAUDE.md  README.md
docs/: TASK-MANAGEMENT.md  future-hooks-ideas.md  hooks-comparison.md  hooks-refactoring-review.md  test-sprint.md  voice-server-analysis.md
hooks/: README.md  agent-voice-post-tool.sh  agent-voice.sh  alex_voice.py  auto-restore.sh  context-loader.py  context-loader.ts  context-monitor.sh  context-router.py  cwd_changed.py  forward_obs.py  memory-capture.py  memory_db.py  (+25 more)
voice-agent/agent/: agent.py  pyproject.toml  vballagent.py
(+361 files in other folders)
