[project]
name = "drive-cli"
version = "0.1.0"
description = "Terminal automation CLI for AI agents. Programmatic tmux control."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "psutil>=5.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["commands", "modules"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"

[tool.hatch.build.targets.sdist]
include = ["main.py", "commands/", "modules/", "pyproject.toml"]

[project.scripts]
drive = "main:cli"
