[project]
name = "voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "livekit-agents[images]>=1.3.6",
    "livekit-plugins-google>=1.3.6",
    "livekit-plugins-liveavatar>=1.3.6",
    "livekit-plugins-silero>=1.3.6",
    "python-dotenv>=1.2.1",
]
